# weave

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml  weave_receipts.db
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  contracts.yml  security.yml
config/: trust_registry.sample.yaml
docs/: api.md  receipts.md
mcp/: __init__.py  manifest.json  server.py
src/weave/: crypto.py  logging_setup.py  settings.py  store.py  subscriber.py  trust_registry.py
src/weave.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_crypto.py  test_mcp_smoke.py  test_store.py  test_subscriber.py  test_subscriber_trust.py  test_trust_registry.py
tests/logging/: test_redaction.py  test_trace_binding.py
