[project]
name = "weave"
version = "0.1.0"
description = "OCN weave"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name="Ahsan Azmi"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
dev = ["pytest>=8", "coverage", "ruff", "black", "mypy"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
