[project]
name = "weave"
version = "0.3.0"
description = "OCN weave"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name="Ahsan Azmi"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "ocn-common @ git+https://github.com/ahsanazmi1/ocn-common.git@v0.2.0#egg=ocn-common"
]

[project.optional-dependencies]
dev = ["pytest>=8", "coverage", "ruff", "black", "mypy", "types-PyYAML", "httpx", "pytest-cov"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
exclude = [
    "src/weave/subscriber.py",  # Exclude subscriber that depends on ocn_common
    "tests/"  # Exclude test files from strict typing
]
explicit_package_bases = true
ignore_missing_imports = true
